--- a/src/style.css
+++ b/src/style.css
@@ -1,36 +1,71 @@
+
 body{
   background-color: #333;
 }
+.container{
+
+
+display: flex;
+justify-content: space-around;
+flex-direction: column;
+text-align: center;
+width: 33vw;
+
+margin: 0 auto;
+}
 
 .header{
-  padding-bottom:5px;
-  color:#fff;
+
+  padding-bottom: 5px;
+  color: #fff;
   font-family: sans-serif;
+  width: 33vw;
+
+  height: 4rem;
 }
 
 .grid{
-  display: inline-grid;
-  grid-template-columns: repeat(3,30px);
-  padding: 20px;
-  border: solid 1px #ccc;
-  gap:5px;
-  background-color: #222;
+
+      display: inline-grid;
+      grid-template-columns: repeat(3, 9.4rem);
+      padding: 20px;
+      border: solid 1px #ccc;
+      gap: 5px;
+      background-color: #222;
+
+      width: 30vw;
 }
 
 
 .cell{
-  height: 30px;
+      height: 4rem;
+
+      width: 4rem;
 }
 
 .enemy, .player{
-  width: 100%;
-  height: 100%;
+  width: 6rem;
+  height: 4rem;
 }
 
-.enemy{
-background-color: red;
-}
+
 
 .player{
-  background-color: blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.imgPlayer{
+
+  background-image: url('./assets/NicePng_spaceship-png_138961.png');
+
+}
+
+.imgEnemy,.imgPlayer{
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
